--- a/BattleshipApp/BattleshipApp.csproj
+++ b/BattleshipApp/BattleshipApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BattleshipApi\BattleshipApi.csproj" />
+  </ItemGroup>
+
 </Project>
