--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,38 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+﻿## Ignore build results
+bin/
+obj/
+out/
 
-/.vs/Battleship
+## User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+*.sln.ide
+*.vspscc
+*.vssscc
+
+## VS Code settings
+.vscode/
+
+## Visual Studio working folder
+.vs/
+
+## Rider settings
+.idea/
+
+## Auto-generated debug files
+*.log
+*.tlog
+
+## NuGet packages
+*.nupkg
+packages/
+project.lock.json
+project.fragment.lock.json
+
+## DotCover
+*.dotCover
+
+## Others
+*.dbm*
